<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">Jetstories</string>
    <string name="app_tagline">Be heard, be seen, be yourself!</string>
    <string name="email_label">Email</string>
    <string name="email_placeholder">Enter your email address</string>
    <string name="name_label">Name</string>
    <string name="name_placeholder">Enter your name</string>
    <string name="password_label">Password</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="confirmation_password_label">Confirm Password</string>
    <string name="confirm_password_placeholder">Confirm your password</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="user_not_found">User not found. Please check your email and password again!</string>
    <string name="universal_error_message">An error has occurred. Please try again later.</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose the app language</string>
    <string name="description_label">Description</string>
    <string name="description_placeholder">Tell your story…</string>
    <string name="clear_text">Clear text</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="no_image_selected">No image selected!</string>
    <string name="allow_storage_permission">Please allow storage permission for select image.</string>
    <string name="add_story">Add Story</string>
    <string name="back">Back</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="replace_media">REPLACE IMAGE</string>
    <string name="submit">Submit</string>
    <string name="success_added_story">Success Added Story</string>
    <string name="logged_out">You are logged out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="more_menu">More Menu</string>
    <string name="there_is_no_story">There is no story right now.</string>
    <string name="logged_in">You are logged in</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="language_changed_to">"Language changed to: %s"</string>
    <string name="change_language">Change Language</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="email_invalid_message">Email must be valid</string>
    <string name="name_invalid_message">Name must be not empty</string>
    <string name="confirm_password_invalid_message">Passwords don\'t match</string>
    <string name="password_invalid_message">Password must be at least 8 characters long</string>
    <string name="description_invalid_message">Description must not empty</string>
    <string name="detail_story">%s\'s Story</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cannot_save_the_image">Cannot save the image!</string>
    <string name="map_view">Map View</string>
    <string name="strRetry">Retry</string>
    <string name="allow_location_permission">Please allow location permission for share location</string>
    <string name="share_location">Share Location</string>
    <string name="map_view_stories">Map View Stories</string>
    <string name="about">About</string>
    <string name="about_page" translatable="false">about_page</string>
    <string name="about_avatar" translatable="false">https://avatars.githubusercontent.com/u/27626889?v=4</string>
    <string name="about_name" translatable="false">Deden Muhamad Furqon</string>
    <string name="about_email" translatable="false">furqoncreative24@gmail.com</string>
    <string name="search_placeholder">Search by name or description</string>
    <string name="favorite_stories">Favorite Stories</string>
    <string name="profile_picture" tools:ignore="MissingTranslation">profile picture</string>
    <string name="unfavorite_icon_button" translatable="false">UnFavorite Icon Button</string>
    <string name="favorite_icon_button" translatable="false">Favorite Icon Button</string>
</resources>