...
                ) {
                    Text(text = stringResource(R.string.there_is_no_story))
                }
            } else {
                LazyColumn(
                    state = lazyListState,
                    modifier = commonModifier.testTag("favorite_story_list"),
                    contentPadding = PaddingValues(16.dp),
                    verticalArrangement = Arrangement.spacedBy(16.dp)
                ) {
                    items(
                        items = stories,
                        key = { it.id },
...
