...
            }
        } else {
            val lazyPagingItems: LazyPagingItems<StoryItem> =
                stories.collectAsLazyPagingItems()

            LazyColumn(
                modifier = modifier.testTag("story_list"),
                contentPadding = PaddingValues(16.dp),
                verticalArrangement = Arrangement.spacedBy(16.dp)
            ) {
                items(key = lazyPagingItems.itemKey { it.id }, count = lazyPagingItems.itemCount) { index ->
                    val story = lazyPagingItems[index]
                    StoryRow(story = story, onClickStory = { onClickStory(story) })
...
