...
    ENGLISH(
        title = "English",
        code = "en",
        icon = "🇬🇧"
    ),
    INDONESIA(
        title = "Bahasa Indonesia",
        code = "id",
        icon = "🇮🇩"
    )
}

data class SettingsUiState(
...
